<resources>
    <string name="app_name">Synapse</string>
    <string name="title_activity_network_edit">Edit Network</string>
    <string name="property_name_sample_rate">Sample Rate</string>
    <string name="property_label_sample_rate_16000">16000</string>
    <string name="property_label_sample_rate_22050">22050</string>
    <string name="property_label_sample_rate_32000">32000</string>
    <string name="property_label_sample_rate_44100">44100</string>
    <string name="property_label_sample_rate_48000">48000</string>
    <string name="property_label_encoding_PCM_16BIT">PCM 16</string>
    <string name="property_label_encoding_PCM_8BIT">PCM 8</string>
    <string name="property_label_encoding_PCM_FLOAT">PCM Float</string>
    <string name="property_name_audio_encoding">Audio Encoding</string>
    <string name="property_name_audio_channels">Audio Channels</string>
    <string name="property_name_audio_source">Audio Source</string>
    <string name="property_label_channel_default">Default</string>
    <string name="property_label_channel_mono">Mono</string>
    <string name="property_label_channel_stereo">Stereo</string>
    <string name="property_label_audio_source_default">Default</string>
    <string name="property_label_audio_source_mic">Mic</string>
    <string name="property_label_audio_source_camcorder">Camcorder</string>
    <string name="property_label_audio_source_voice_communication">Voice Communication</string>
    <string name="property_label_audio_source_voice_recognition">Voice Recognition</string>
    <string name="name_node_type_camera">Camera</string>
    <string name="name_node_type_microphone">Microphone</string>
    <string name="name_node_type_screen">Screen</string>
    <string name="name_node_type_speaker">Speakers</string>
    <string name="name_node_type_image">Image</string>
    <string name="name_node_type_audio_file">Audio File</string>
    <string name="name_node_type_video_file">Video File</string>
    <string name="name_node_type_color_filter">Color</string>
    <string name="name_node_type_shader_filter">Shader Filter</string>
    <string name="name_data_type_audio_buffer">Audio Buffer</string>
    <string name="name_data_type_surface">Surface</string>
    <string name="name_data_type_texture">Texture</string>
    <string name="todo_content_description">image</string>
    <string name="heading_node_inputs">Inputs</string>
    <string name="heading_node_outputs">Outputs</string>
    <string name="node_edit_properties">Properties</string>
    <string name="menu_view_network">View</string>
    <string name="menu_delete_network">Delete</string>
    <string name="edit_network_name">Network Name</string>
    <string name="title_network_list">Networks</string>
    <string name="confirm_delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="property_name_camera_device">Facing</string>
    <string name="property_label_camera_lens_facing_front">Front</string>
    <string name="property_label_camera_lens_facing_back">Back</string>
    <string name="property_label_camera_capture_size_1080">1080p</string>
    <string name="property_label_camera_capture_size_720">720p</string>
    <string name="property_name_camera_capture_size">Capture Size</string>
    <string name="property_label_camera_fps_10">10</string>
    <string name="property_label_camera_fps_15">15</string>
    <string name="property_label_camera_fps_24">24</string>
    <string name="property_label_camera_fps_30">30</string>
    <string name="property_label_camera_fps_60">60</string>
    <string name="property_name_frame_rate">FPS</string>
    <string name="property_label_camera_capture_size_480">640x480</string>
    <string name="name_node_type_audio_waveform">Audio Waveform</string>
    <string name="name_node_type_frame_difference">Frame Difference</string>
    <string name="name_node_type_grayscale_filter">Grayscale Filter</string>
    <string name="name_node_type_blur_filter">Blur Filter</string>
    <string name="name_node_type_overlay_filter">Overlay Filter</string>
    <string name="property_label_blur_size_5">5x5</string>
    <string name="property_label_blur_size_9">9x9</string>
    <string name="property_label_blur_size_13">13x13</string>
    <string name="property_name_blur_size">Blur Size</string>
    <string name="property_label_1">1</string>
    <string name="property_label_2">2</string>
    <string name="property_label_3">3</string>
    <string name="property_label_4">4</string>
    <string name="property_label_5">5</string>
    <string name="property_label_6">6</string>
    <string name="property_label_7">7</string>
    <string name="property_label_8">8</string>
    <string name="property_label_9">9</string>
    <string name="property_label_10">10</string>
    <string name="property_name_num_passes">Blur Passes</string>
    <string name="property_name_quant_depth">Quant Depth</string>
    <string name="property_label_scale_factor_4">1/4</string>
    <string name="property_label_scale_factor_2">1/2</string>
    <string name="property_label_scale_factor_1">1</string>
    <string name="property_name_scale_factor">Scale Factor</string>
    <string name="property_label_scale_factor_8">1/8</string>
    <string name="property_label_scale_factor_16">1/16</string>
    <string name="name_node_type_multiply_accumulate">Multiply Accumulate</string>
    <string name="property_label_float_zero">0.0</string>
    <string name="property_label_float_point_one">0.1</string>
    <string name="property_label_float_one">1.0</string>
    <string name="property_label_float_point_two">0.2</string>
    <string name="property_label_float_point_three">0.3</string>
    <string name="property_label_float_point_four">0.4</string>
    <string name="property_label_float_point_five">0.5</string>
    <string name="property_label_float_point_six">0.6</string>
    <string name="property_label_float_point_seven">0.7</string>
    <string name="property_label_float_point_eight">0.8</string>
    <string name="property_label_float_point_nine">0.9</string>
    <string name="property_name_multiply_factor">Multiply Factor</string>
    <string name="property_name_accumulate_factor">Accumulate Factor</string>
    <string name="property_name_uri">Uri</string>
    <string name="button_select_file">Open</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_connect">Connect</string>
    <string name="name_node_type_media_file">Media File</string>
    <string name="menu_title_delete_node">Delete Node</string>
    <string name="menu_title_add_node">Add Node</string>
    <string name="menu_title_jump_to_node">Jump to Node</string>
    <string name="menu_title_execute">Execute</string>
    <string name="add_connection">Connect</string>
    <string name="delete_connection">Disconnect</string>
    <string name="name_node_type_properties">Network Properties</string>
    <string name="menu_title_delete_network">Delete Network</string>
    <string name="menu_title_jump_to_network">Network Settings</string>
    <string name="content_description_icon">Icon</string>
    <string name="property_title_crop_to_fit">Crop to Fit</string>
    <string name="property_subtitle_crop_to_fit_disabled">Show full frame</string>
    <string name="property_subtitle_crop_to_fit_enabled">Crop to fill frame</string>
    <string name="property_label_camera_capture_size_2160">2160p</string>
    <string name="property_name_downsample_factor">Downsample Factor</string>
    <string name="property_label_true">True</string>
    <string name="property_label_false">False</string>
    <string name="name_node_type_create">Add a Node</string>
    <string name="button_save">Save</string>
    <string name="property_name_network_name">Network Name</string>
    <string name="name_node_type_slime_mold">Slime Mold</string>
    <string name="property_name_num_agents">Number of Agents</string>
    <string name="property_name_environment_video_size">Environment Video Size</string>
    <string name="property_label_camera_capture_size_1024sq">1024x1024</string>
    <string name="name_node_type_image_blend">Image Blend</string>
    <string name="property_name_blend_mode">Blend Mode</string>
    <string name="property_label_blend_mode_add">Add</string>
    <string name="property_label_blend_mode_average">Average</string>
    <string name="property_label_blend_mode_color_burn">Color Burn</string>
    <string name="property_label_blend_mode_color_dodge">Color Dodge</string>
    <string name="property_label_blend_mode_darken">Darken</string>
    <string name="property_label_blend_mode_difference">Difference</string>
    <string name="property_label_blend_mode_exclusion">Exclusion</string>
    <string name="property_label_blend_mode_glow">Glow</string>
    <string name="property_label_blend_mode_hard_light">Hard Light</string>
    <string name="property_label_blend_mode_hard_mix">Hard Mix</string>
    <string name="property_label_blend_mode_lighten">Lighten</string>
    <string name="property_label_blend_mode_linear_burn">Linear Burn</string>
    <string name="property_label_blend_mode_linear_dodge">Linear Dodge</string>
    <string name="property_label_blend_mode_linear_light">Linear Light</string>
    <string name="property_label_blend_mode_multiply">Multiply</string>
    <string name="property_label_blend_mode_negation">Negation</string>
    <string name="property_label_blend_mode_normal">Normal</string>
    <string name="property_label_blend_mode_overlay">Overlay</string>
    <string name="property_label_blend_mode_phoenix">Phoenix</string>
    <string name="property_label_blend_mode_pin_light">Pin Light</string>
    <string name="property_label_blend_mode_reflect">Reflect</string>
    <string name="property_label_blend_mode_screen">Screen</string>
    <string name="property_label_blend_mode_soft_light">Soft Light</string>
    <string name="property_label_blend_mode_subtract">Subtract</string>
    <string name="property_label_blend_mode_vivid_light">Vivid Light</string>
    <string name="name_node_type_lut2d_filter">LUT Filter</string>
    <string name="property_name_opacity">Opacity</string>
    <string name="property_name_sensor_angle">Sensor Angle</string>
    <string name="property_name_sensor_distance">Sensor Distance</string>
    <string name="property_name_travel_angle">Travel Angle</string>
    <string name="property_name_travel_distance">Travel Distance</string>
    <string name="name_node_type_lut3d_filter">3D LUT</string>
    <string name="name_node_type_cube_importer">CUBE File</string>
    <string name="name_node_type_crop_resize">Crop/Resize</string>
    <string name="property_label_camera_capture_size_320">320x320</string>
    <string name="name_node_type_shape">Shape</string>
    <string name="property_name_capture_size">Capture Size</string>
    <string name="name_node_type_ring_buffer">Ring Buffer</string>
    <string name="property_name_history_size">Frames</string>
    <string name="property_name_slice_depth">Slice Depth</string>
    <string name="name_node_type_slice_3d">2D Slice of 3D Texture</string>
    <string name="title_camera_settings">Camera Settings</string>
    <string name="property_label_on">On</string>
    <string name="property_label_off">Off</string>
    <string name="property_name_camera_stabilize">Stabilization</string>
    <string name="done">Done</string>
    <string name="name_node_type_media_encoder">Media Encoder</string>
    <string name="property_name_recording">Recording</string>
    <string name="title_gallery">Videos</string>
    <string name="button_record">Record</string>
    <string name="button_settings">Settings</string>
    <string name="button_effects">Effects</string>
    <string name="show_preview">Preview</string>
    <string name="expose_port">Expose</string>
    <string name="network">Network</string>
    <string name="hint_name">name</string>
    <string name="hint_description">description</string>
</resources>