<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/jump_to_network"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_title_jump_to_network"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/jump_to_node"
        android:icon="@drawable/ic_list"
        android:title="@string/menu_title_jump_to_node"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_node"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_title_add_node"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_node"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_title_delete_node"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
</menu>