<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_preview"
        android:icon="@drawable/ic_remove_red_eye"
        android:title="@string/show_preview"
        app:iconTint="@color/colorAccent"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/add_connection"
        android:icon="@drawable/ic_add"
        android:title="@string/add_connection"
        app:iconTint="@color/colorAccent"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/delete_connection"
        android:icon="@drawable/ic_clear"
        android:title="@string/delete_connection"
        app:iconTint="@color/colorAccent"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/expose_port"
        android:icon="@drawable/ic_import_export"
        android:title="@string/expose_port"
        app:iconTint="@color/colorAccent"
        app:showAsAction="ifRoom|withText" />
</menu>