<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="9:16"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/video_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1:23.84"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/button_record"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/button_record"
            android:src="@drawable/ic_record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/button_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_settings"
            android:src="@drawable/ic_settings"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/button_record"
            app:layout_constraintEnd_toStartOf="@id/button_record"
            app:layout_constraintStart_toEndOf="@id/button_effects"
            app:layout_constraintTop_toTopOf="@id/button_record" />

        <ImageButton
            android:id="@+id/button_color"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/name_node_type_color_filter"
            android:src="@drawable/ic_color_lens"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/button_record"
            app:layout_constraintEnd_toStartOf="@id/button_gallery"
            app:layout_constraintStart_toEndOf="@id/button_record"
            app:layout_constraintTop_toTopOf="@id/button_record" />


        <ImageButton
            android:id="@+id/button_effects"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/button_effects"
            android:src="@drawable/ic_network"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/button_record"
            app:layout_constraintEnd_toStartOf="@id/button_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_record" />

        <ImageButton
            android:id="@+id/button_gallery"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/title_gallery"
            android:src="@drawable/ic_video_library"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/button_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_color"
            app:layout_constraintTop_toTopOf="@id/button_record" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/effect_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/effect_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/layout_property" />

        <TextView
            android:id="@+id/effect_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/button_record"
            tools:text="none" />

        <ImageButton
            android:id="@+id/button_edit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_edit"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="@string/bottom_sheet_behavior"
        tools:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>