<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:background="@color/lighter_grey"
        android:layout_height="48dp"
        android:drawablePadding="8dp"
        android:paddingStart="12dp"
        android:drawableTint="@color/grey"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@id/button_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:drawableStart="@drawable/ic_mic"
        tools:text="Microphone" />

    <Button
        android:text="@string/node_edit_properties"
        android:id="@+id/button_settings"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_settings"
        android:drawablePadding="8dp"
        android:drawableTint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/light_grey"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/header_output"
        app:layout_constraintStart_toEndOf="@id/header_input"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/header_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/heading_node_inputs"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/header_output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/header_output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:gravity="end"
        android:padding="8dp"
        android:text="@string/heading_node_outputs"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header_input"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inputs_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/outputs_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/outputs_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/inputs_menu"
        app:layout_constraintTop_toBottomOf="@id/header_output" />

</androidx.constraintlayout.widget.ConstraintLayout>